# swe-test-amora

./: .env example  README.md  docker-compose.yml  main.py  pyproject.toml
src/: alembic.ini
src/alembic/: env.py
src/alembic/versions/: 5f3ed1146f47_.py  9bc80907d76e_change_atribute_name.py  d717c6178882_remove_unique_property_name.py
src/db/: database.py
src/db/models/: propertyNegotiation.py
src/propertyNegotiation/: config.py  repo.py  router.py  schema.py  service.py
src/test/unit/: test_assess_risk.py
test/unit/: test_assess_risk.py
