[tool.poetry]
name = "swe-test-amora"
version = "0.1.0"
description = ""
authors = ["Victor <victorqalves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.32.1"
fastapi = "^0.115.6"
pydantic = "^2.10.3"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
