[tool.poetry]
name = "swe-test-amora"
version = "0.1.0"
description = ""
authors = ["Victor <victorqalves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.32.1"
fastapi = "^0.115.6"
pydantic = "^2.10.3"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".","src"]